Fixing styles to look better on Mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,10 @@
 @media (orientation: portrait) {
 	#wrapContainer {
 		flex-direction: column;
+		padding-left: 0.5rem;
+		padding-right: 0.5rem;
+		margin-left: 0.5rem;
+		margin-right: 0.5rem;
 	}
 
 	.landscapeOnly {
@@ -15,6 +19,10 @@
 @media (orientation: landscape) {
 	#wrapContainer {
 		flex-direction: row;
+		padding-left: 3rem;
+		padding-right: 3rem;
+		margin-left: 3rem;
+		margin-right: 3rem;
 	}
 
 	.portraitOnly {
